--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "dotenv": "^17.2.2",
     "expo": "~54.0.0",
     "expo-constants": "^18.0.8",
+    "expo-document-picker": "~14.0.7",
     "expo-status-bar": "~3.0.7",
     "firebase": "^12.4.0",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-get-random-values": "^1.11.0",
-    "react-native-url-polyfill": "^2.0.0"
+    "react-native-url-polyfill": "^2.0.0",
+    "xlsx": "^0.18.5",
+    "expo-file-system": "~19.0.17"
   },
   "private": true
 }
